# pdf-wtf

./: .Dockerfile-unpaper  .dockerignore  .gitignore  README.md  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_pinned.txt  unpaper.cmd
.github/workflows/: codeql.yml
instance/logs/: README.md
instance/temp/: README.md
src/pdfwtf/: cli.py  imaging.py  pipeline.py  unpaper_run.py  utils.py
src/pdfwtf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pdfwtf/scraper/: service.py  tools.py  utils.py
src/pdfwtf/utils/: analyze.py  common.py
src/tools/: unpaper.py  unpaper_wrap.py
tests/: test_pipeline.py  test_utils.py
