[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfwtf"
version = "0.1.0"
description = "Smart PDF parsing pipeline: remove pages, OCR scanned PDFs, export images & text"
authors = [
    { name = "Filip Kriz", email = "1353748+filak@users.noreply.github.com" }
]
license = { text = "AGPL-3.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF==1.26.6",
    "ocrmypdf==16.12.0",
    "pikepdf==10.0.2",
    "pytesseract==0.3.13",
    "click==8.3.1",
    "selenium==4.38.0",
    "webdriver-manager==4.0.2"
]

[project.scripts]
pdfwtf = "pdfwtf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "pytest",
    "pip-audit"
]
